test/constBlockConsuming16_3.slq

def foo(x:ğ”¹){
	y:=dup(x);
	z:=dup(y);
	if z{
		w:=X(z); /// error
	}else{
		x:=H(x);
		w:=z;
	}
	return (x,w);
}

